# ddstats-web

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  index.js  package-lock.json  package.json  pnpm-lock.yaml  reload.sh  routes.js  template.env  tsconfig.json
assets/css/: Tee.css  main.css
assets/js/: TeeAssembler.js  sortable.js
lib/: database.js  express.js  logger.js  macros.js  misc.js  queries.js
models/: leaderboard.js  map.js  player.js
routes/: leaderboards.js  map.js  misc.js  player.js  router.js
scss/: _palette.scss  fonts.scss  main.scss  old.scss  tee.scss
sql/leaderboard/: most_played.sql  most_rank1s.sql  most_team_rank1s.sql  worst_times.sql
sql/map/: get_all.sql  info.sql  playtime.sql  rankings.sql  search.sql  team_rankings.sql  time_cps.sql  time_cps_sort.sql
sql/mapper/: maps.sql
sql/misc/: rank1s-search.sql  teamrank1s-search.sql
sql/player/: all_first_finishes.sql  all_top_10s.sql  completion_progress.sql  favourite_rank1s_teammates.sql  favourite_teammates.sql  finishes.sql  general_activity.sql  most_played_categories.sql  most_played_gametypes.sql  most_played_locations.sql  most_played_maps.sql  playtime_per_month.sql  points-graph.sql  profile_by_name.sql  profile_old_by_name.sql  rank_points_entries.sql  recent_activity.sql  recent_finishes.sql  recent_player_info.sql  recent_top_10s.sql  search.sql  unfinished_maps.sql
src/: database.rs  error.rs  index.ts  main.rs  points.rs  utils.rs
src/http/: error.rs  macros.rs  misc.rs  mod.rs  templates.rs  tera.rs
src/http/routes/: api.rs  leaderboard.rs  map.rs  mapper.rs  misc.rs  mod.rs  player.rs
src/lib/: database.ts  express.ts  logger.ts  macros.ts  misc.ts
src/models/: leaderboard.rs  leaderboard.ts  map.rs  map.ts  mapper.rs  misc.rs  mod.rs  player.rs  player.ts
src/routes/: leaderboards.ts  map.ts  misc.ts  player.ts  router.ts
src/tera/: country_codes.rs  filters.rs  mod.rs  server_codes.rs
static/css/: main.css
static/js/: TeeAssembler.js  ddstats.js  sortable.js
static/root/: robots.txt  site.webmanifest
templates/: 404.html  base.html  charts.html  error.html  faq.html  landing.html  macros.html  search-api.html  search.html
templates/leaderboard/: leaderboards.html  most_played.html  points.html  rank1s.html  worst_times.html
templates/map/: 404.html  base.html  overview.html  playtime.html  time_cps.html
templates/mapper/: 404.html  base.html  maps.html
templates/misc/: misc.html  rank1s-searcher.html
templates/player/: 404.html  base.html
templates/player/activity/: activity.html  most_played_maps.html  player_info.html  playtime.html
templates/player/finishes/: finishes.html
views/components/: list.njk  utils.njk
views/pages/: 404.njk  faq.njk  home.njk  leaderboards.njk  search.njk  status.njk
views/templates/: base.njk
(+35 files in other folders)
