[package]
name = "ddstats-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7"
serde = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros" ] }
dotenvy = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
debug = false
codegen-units = 1
lto = true

# From: https://github.com/launchbadge/sqlx?tab=readme-ov-file#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]
