[package]
name = "ddstats-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
serde = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "normalize-path"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros" ] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10.4"
tera = "1"
phf = { version = "0.11.2", features = ["macros"] }
rmp-serde = "1.3"
msgpack_simple  = "1"
indexmap = { version = "2", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
notify = "6.1.1"
tower = "0.4"
notify-debouncer-mini = "0.4.1"

[profile.release]
debug = false
codegen-units = 1
lto = true

# From: https://github.com/launchbadge/sqlx?tab=readme-ov-file#compile-time-verification
[profile.dev.package.sqlx-macros]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]
